fixed white spacing

--- a/Jana/src/app/app.component.css
+++ b/Jana/src/app/app.component.css
@@ -1,4 +1,7 @@
-
+:host{
+  margin: 0;
+  padding: 0;
+}
 
 
 .wizard-container {
